--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 </head>
 <body>
+
+<!---------------------- header -------------------->
     <header>
         <nav class="navbar">
             <a href="#" class="heading">Webshop</a>
@@ -17,6 +19,9 @@
             <ul class="nav-menu">
                 <li class="nav-item">
                     <a href="#" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Our menu</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">About</a>
@@ -37,8 +42,15 @@
 
     </header>
 
-    <main></main>
+    <main>
+        <div id="products">
 
+        </div>
+
+    </main>
+
+
+<!---------------------- footer -------------------->
     <footer></footer>
 
     <script src="script.js"></script>
