--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 </li>
             </ul>
 
-            <div class="burger-menu">
+            <button class="burger-menu" aria-label="main menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
-            </div>
+            </button>
 
         </nav>
 
@@ -43,9 +43,11 @@
     </header>
 
     <main>
-        <div id="products">
+        <h1>Heading</h1>
 
-        </div>
+        <div id="products"></div>
+
+        <div id="img-container"></div>
 
     </main>
 
