feat: add images to product array

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 <!---------------------- header -------------------->
     <header>
         <nav class="navbar">
-            <a href="#" class="heading">Webshop</a>
-
+            <a href="#" class="heading">Café C</a>
             <ul class="nav-menu">
                 <li class="nav-item">
                     <a href="#" class="nav-link">Home</a>
@@ -42,12 +41,14 @@
 
     </header>
 
+<!---------------------- main page -------------------->
+
     <main>
         <h1>Heading</h1>
 
-        <div id="products"></div>
+        <div class="product-container" id="container"></div>
 
-        <div id="img-container"></div>
+        
 
     </main>
 
