fix: increase & decrease buttons, feat: add cart

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <link rel="stylesheet" href="normalize.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -44,11 +48,16 @@
 <!---------------------- main page -------------------->
 
     <main>
-        <h1>Heading</h1>
+        <div class="first-page">
+            <h1>Heading</h1>
+            <div class="first-page-divider"></div>
+        </div>
 
         <div class="product-container" id="container"></div>
 
-        
+        <h3>Shopping Cart</h3>
+        <h4>Order summary</h4>
+        <div id="shoppingCart"></div>        
 
     </main>
 
