--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -53,11 +54,15 @@
             <div class="first-page-divider"></div>
         </div>
 
+        <div class="filter-container"></div>
+
         <div class="product-container" id="container"></div>
 
-        <h3>Shopping Cart</h3>
-        <h4>Order summary</h4>
-        <div id="shoppingCart"></div>        
+        <div class="cart-container">
+            <h3>Shopping Cart</h3>
+            <h4>Order summary</h4>
+            <div id="shoppingCart"></div>        
+        </div>    
 
     </main>
 
