--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="normalize.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 
 </head>
@@ -54,7 +53,7 @@
             <div class="first-page-divider"></div>
         </div>
 
-        <div class="filter-container"></div>
+        <div class="filter-container" id="filterContainer"></div>
 
         <div class="product-container" id="container"></div>
 
@@ -62,7 +61,51 @@
             <h3>Shopping Cart</h3>
             <h4>Order summary</h4>
             <div id="shoppingCart"></div>        
-        </div>    
+        </div> 
+        
+        <form class="customer-form" id="customerForm">
+
+            <h5>Contact</h5>
+
+            <span class="input-container">
+                <label for="firstname">First name</label>
+                <input type="text" id="firstname" name="name" required>
+            </span>
+
+            <span class="input-container">
+                <label for="lastname">Last name</label>
+                <input type="text" id="lastname" name="name" required>
+            </span>
+
+            <span class="input-container">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+            </span>
+
+            <span class="input-container">
+                <label for="street">Street and house number</label>
+                <input type="text" id="street" name="street" required>
+            </span>
+
+            <span class="input-container">
+                <label for="postalcode">Postal code</label>
+                <input type="text" id="postalcode" name="postalcode" placeholder="Postal code" required>
+            </span>
+
+            <span class="input-container">
+                <label for="city">City/town</label>
+                <input type="text" id="city" name="city" placeholder="City/town" required>
+            </span>
+
+            <span class="input-container">
+                <label for="tel">Phone</label>
+                <input type="tel" id="tel" name="tel" required>
+            </span>
+
+            <button class="order-button" id="orderBtn">
+                Place order
+            </button>
+        </form>
 
     </main>
 
