feat: add sort by price button

--- a/index.html
+++ b/index.html
@@ -53,9 +53,12 @@
             <div class="first-page-divider"></div>
         </div>
 
-        <div class="filter-container" id="filterContainer"></div>
+        <div class="sort-container" id="sortContainer">
+            <button class="sort-button" id="sortButton">Sort by price</button>
+        </div>
 
         <div class="product-container" id="container"></div>
+        <div id="priceContainer"></div>
 
         <div class="cart-container">
             <h3>Shopping Cart</h3>
