feat: add sort by name button

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
         </div>
 
         <div class="sort-container" id="sortContainer">
-            <button class="sort-button" id="sortButton">Sort by price</button>
+            <button class="sort-name" id="sortNameButton">Sort alphabetically</button>
+            <button class="sort-price" id="sortPriceButton">Sort by price</button>
         </div>
 
         <div class="product-container" id="container"></div>
