style: add icons as sorting buttons

--- a/index.html
+++ b/index.html
@@ -54,8 +54,14 @@
         </div>
 
         <div class="sort-container" id="sortContainer">
-            <button class="sort-name" id="sortNameButton">Sort alphabetically</button>
-            <button class="sort-price" id="sortPriceButton">Sort by price</button>
+            <span class="sort-products">Sort products</span> 
+            <button class="sort-name" id="sortNameButton">
+                <svg xmlns="http://www.w3.org/2000/svg" height="35" viewBox="0 -960 960 960" width="35"><path d="m80-280 150-400h86l150 400h-82l-34-96H196l-32 96H80Zm140-164h104l-48-150h-6l-50 150Zm328 164v-76l202-252H556v-72h282v76L638-352h202v72H548ZM360-760l120-120 120 120H360ZM480-80 360-200h240L480-80Z"/></svg>
+            </button>
+
+            <button class="sort-price" id="sortPriceButton">
+                <svg xmlns="http://www.w3.org/2000/svg" height="35" viewBox="0 -960 960 960" width="35"><path d="M560-440q-50 0-85-35t-35-85q0-50 35-85t85-35q50 0 85 35t35 85q0 50-35 85t-85 35ZM280-320q-33 0-56.5-23.5T200-400v-320q0-33 23.5-56.5T280-800h560q33 0 56.5 23.5T920-720v320q0 33-23.5 56.5T840-320H280Zm80-80h400q0-33 23.5-56.5T840-480v-160q-33 0-56.5-23.5T760-720H360q0 33-23.5 56.5T280-640v160q33 0 56.5 23.5T360-400Zm440 240H120q-33 0-56.5-23.5T40-240v-440h80v440h680v80ZM280-400v-320 320Z"/></svg>
+            </button>
         </div>
 
         <div class="product-container" id="container"></div>
