--- a/index.html
+++ b/index.html
@@ -83,27 +83,32 @@
 
             <span class="input-container">
                 <label for="firstname">First name</label>
-                <input type="text" id="firstname" name="name" required>
+                <input type="text" id="firstname" name="name" placeholder="John" required>
             </span>
 
             <span class="input-container">
                 <label for="lastname">Last name</label>
-                <input type="text" id="lastname" name="name" required>
+                <input type="text" id="lastname" name="name" placeholder="Smith" required>
             </span>
 
             <span class="input-container">
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" placeholder="email@example.com" required>
             </span>
 
             <span class="input-container">
                 <label for="street">Street and house number</label>
-                <input type="text" id="street" name="street" required>
+                <input type="text" id="street" name="street" placeholder="Street address" required>
+            </span>
+
+            <span class="input-container">
+                <label for="passcode">Ev. passcode</label>
+                <input type="text" id="passcode" name="passcode" placeholder="e.g. 1234" required>
             </span>
 
             <span class="input-container">
                 <label for="postalcode">Postal code</label>
-                <input type="text" id="postalcode" name="postalcode" placeholder="Postal code" required>
+                <input type="text" id="postalcode" name="postalcode" placeholder="123 45" required>
             </span>
 
             <span class="input-container">
@@ -113,7 +118,7 @@
 
             <span class="input-container">
                 <label for="tel">Phone</label>
-                <input type="tel" id="tel" name="tel" required>
+                <input type="tel" id="tel" name="tel" placeholder="000-000-0000" required>
             </span>
 
             <button class="order-button" id="orderBtn">
