feat: add shopping cart timer

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 
         <div class="cart-container">
             <h3>Shopping Cart</h3>
+            <div class="timer" id="countdownTimer"></div>
             <h4>Order summary</h4>
             <div class="shopping-cart" id="shoppingCart"></div>        
         </div> 
@@ -144,18 +145,18 @@
                 <input type="tel" id="tel" name="tel" placeholder="000-000-0000" required>
             </span>
 
-            <span class="input-container">
-                <label for="discount-input">Discount code or gift card</label>
-                <input type="text" id="discountInput" name="discount-input" placeholder="Discount code or gift card">
+            <span class="discount-container">
+                <label class="discount-label"for="discount-input">Discount code or gift card</label>
+                <input type="text" class="discount-input" id="discountInput" name="discount-input" placeholder="Discount code or gift card">
                 <button class="discount-button" id="discountButton">→</button>
             </span>
 
-            <label>
+            <label class="form-checkboxes">
                 <input type="checkbox" name="gdpr" required>
                 <span>I consent use of my personal data</span>
             </label>
 
-            <label>
+            <label class="form-checkboxes">
                 <input type="checkbox" name="news-letter">
                 <span>Recieve news & offers via email!</span>
             </label>
