style: add layout & positioning to desktop version

--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
         <div class="category-container">
             <label class="category-labels">
                 <input class="sort-vegan-button" id="sortVeganButton" type="radio" name="category-button" value="vegan">
-                <span>Vegan</span>
+                <span class="sort-vegan-text">Vegan</span>
             </label>
 
             <label class="category-labels">
                 <input class="sort-gluten-free-button" id="sortGlutenFreeButton" type="radio" name="category-button" value="gluten-free">
-                <span>Gluten-free</span>
+                <span class="sort-gluten-free-text">Gluten-free</span>
             </label>
 
             <label class="category-labels">
                 <input class="sort-nuts-button" id="sortNutsButton" type="radio" name="category-button" value="traces-of-nuts">
-                <span>May contain traces of nuts</span>
+                <span class="sort-nuts-text">May contain traces of nuts</span>
             </label>
         </div>
 
