feat: add light vs dark theme toggle

--- a/index.html
+++ b/index.html
@@ -14,36 +14,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Arizonia&display=swap" rel="stylesheet">
 
 </head>
-<body>
+<body class="light-mode">
 
 <!---------------------- header -------------------->
     <header>
-        <nav class="navbar">
-            <a href="#" class="heading">Café C</a>
-            <ul class="nav-menu">
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Our menu</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">About</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Contact</a>
-                </li>
-            </ul>
+        <a href="#" class="heading">Café C</a>
 
-            <button class="burger-menu" aria-label="main menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </button>
-
-        </nav>
-
-
+        <button class="theme-toggle" onclick="toggleTheme()">Theme</button>
     </header>
 
 <!---------------------- main page -------------------->
