feat: add popup when add to cart

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
         <div class="product-container" id="container"></div>
         <div id="priceContainer"></div>
+        <div id="popup" class="hidden">Added to cart</div>
 
 
         <!---------------------- shopping cart container -------------------->
@@ -138,7 +139,7 @@
             </label>
 
             <label class="form-checkboxes">
-                <input type="checkbox" name="news-letter">
+                <input type="checkbox" name="news-letter" checked>
                 <span>Recieve news & offers via email!</span>
             </label>
 
