feat: add order summary popup

--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
         </div> 
 
 
+        <!---------------------- order summary -------------------->
+        <div class="hidden" id="orderSummary"></div>
+
+
         <!---------------------- customer form -------------------->
         
         <form class="customer-form" id="customerForm">
