feat: add reset button to form

--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
                 <span>Recieve news & offers via email!</span>
             </label>
 
+            <button type="button" id="resetBtn">Reset form</button>
+
+
             <!---------------------- payment options -------------------->
 
             <div class="payment-options">
