style: add styling to reset button

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <span>Recieve news & offers via email!</span>
             </label>
 
-            <button type="button" id="resetBtn">Reset form</button>
+            <button class="reset-button" type="button" id="resetBtn">Reset form & cart</button>
 
 
             <!---------------------- payment options -------------------->
