--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="shopping-cart" id="shoppingCart"></div>
              
             <span class="discount-container">
-                <label class="discount-label"for="discount-input">Discount code or gift card</label>
+                <label class="discount-label" for="discount-input">Discount code or gift card</label>
                 <input type="text" class="discount-input" id="discountInput" name="discount-input" placeholder="Discount code or gift card">
                 <button class="discount-button" id="discountButton">→</button>
             </span>       
@@ -179,7 +179,7 @@
                   <label>
                     <span>Date</span>
                     <span>
-                        <input class="payment-input small" type="number" class="small" placeholder="YY" id="creditCardYear">
+                        <input class="payment-input small" type="number" placeholder="YY" id="creditCardYear">
                         /
                         <input type="number" class="payment-input small" placeholder="MM" id="creditCardMonth">
                       </span>
@@ -193,17 +193,8 @@
                 <button class="order-button" id="orderBtn" disabled>Place order</button>
             </div>
         </form>  
-
-<script src="main.js"></script>
-</body>
-</html>
-
-
     </main>
 
-
-<!---------------------- footer -------------------->
-    <footer></footer>
 
     <script src="script.js"></script>
 </body>
